Change header and main so that main is no longer covered

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header {
   background-color: #333333;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 nav {
@@ -25,6 +26,7 @@ nav li {
 
 main {
   text-align: center;
+  position: relative;
 }
 
 main h1 {
